EPBDS-10034: refactoring
--HG--
branch : EPBDS-10034_storelogdata_hive